--- a/src/css/CodeInput.css
+++ b/src/css/CodeInput.css
@@ -91,3 +91,7 @@
     padding: 0px 10px 20px 10px;
     box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.25); 
   }
+
+  .button-action {
+    margin-left: 20px;
+  }
