--- a/src/css/PrettyCode.css
+++ b/src/css/PrettyCode.css
@@ -2,4 +2,6 @@
     background-color: #fff;
     box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.25); 
     padding: 10px 10px 10px 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
